--- a/index.html
+++ b/index.html
@@ -1,1 +1,54 @@
-hello!! world
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
+		<link rel="stylesheet" href="styles.css" />
+		<link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet" />
+	</head>
+	<body>
+		<!-- comienza a añadir nuevas etiquetas o tags aquí -->
+		<div class="postcard">
+			<div class="postcard-header">
+				<h1>Mi postal</h1>
+				<img
+					src="https://raw.githubusercontent.com/breatheco-de/exercise-postcard/e63a7916530cc850bd92aa1c2e19191837fb5c80/.learn/assets/4geeks.png"
+				/>
+			</div>
+			<div class="postcard-body">
+				<div class="body-left">
+					<p>
+						Bienvenidos a mi primera <br />
+						carta postal.<br />
+						He creado esta carta <br />
+						con mucho cariño, ya que <br />
+						considero que es mi primer <br />
+						proyecto desde cero si <br />
+						se podría decir.
+					</p>
+					<img
+						src="https://media3.giphy.com/media/RhMmGFlRGT1UtgGTaD/giphy_s.gif?cid=6c09b9526dtrbt59bk4lmibcg6qqvpoadliqs91xd32nx2yc&ep=v1_stickers_search&rid=giphy_s.gif&ct=s"
+					/>
+				</div>
+				<div class="body-right">
+					<img src="https://images.stockcake.com/public/6/5/a/65a314ed-ef16-4fba-872e-8789cc8db177_large/coder-at-work-stockcake.jpg" />
+					<p>
+						Me encantaría en un futuro <br />
+						poder llegar a dedicarme a <br />
+						seguridad informática, os invito <br />
+						a leer este artículo sobre <br />
+						la seguridad informática
+					</p>
+					<a
+						href="https://es.wikipedia.org/wiki/Seguridad_inform%C3%A1tica#:~:text=La%20seguridad%20inform%C3%A1tica%2C%20tambi%C3%A9n%20conocida,a%20trav%C3%A9s%20de%20las%20redes"
+						>Click para ir al artículo</a
+					>
+				</div>
+			</div>
+			<div class="postcard-footer">
+				<button>Enviar carta Postal</button>
+			</div>
+		</div>
+	</body>
+</html>
