--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					/>
 				</div>
 				<div class="body-right">
-					<img src="https://images.stockcake.com/public/6/5/a/65a314ed-ef16-4fba-872e-8789cc8db177_large/coder-at-work-stockcake.jpg" />
+					<img src="../exercise-postcard_AnaFiguereo/imagen/informa.png" />
 					<p>
 						Me encantaría en un futuro <br />
 						poder llegar a dedicarme a <br />
